tests/fixtures/syntax/invalid/dir_contains_entry_workspace_path_literal.repor
case "dir contains entry name requires a string literal, not a workspace path literal" {
  $ true
  assert {
    dir <"out"> contains <"entry">
  }
}
